# AVFileTrim

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
avfiletrim/: __init__.py  __main__.py  base.py  cli.py  metadefender.py  models.py  scanner.py  trimmer.py
