[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avfiletrim"
version = "0.1.0"
description = "Incrementally trim binary files and scan each slice with VirusTotal to locate AV signature boundaries"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
avfiletrim = "avfiletrim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["avfiletrim"]
